[package]
name = "rsrpc"
version = "0.12.0"
edition = "2018"
authors = ["spikehd"]

[lib]
name = "rsrpc"
path = "src/lib.rs"

[dependencies]
# binary-only
clap = { version = "4.3.21", features = ["derive"], optional = true }
sysinfo = "0.29.8"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"
simple-websockets = "0.1.6"
chrono = "0.4.13"
rayon = "1.7.0"

#[cfg(target_os = "windows")]
winapi = { version = "0.3.9", features = ["namedpipeapi", "winbase"] }

[[bin]]
name = "rsrpc"
path = "src/bin.rs"
required-features = ["clap"]

[features]
binary = ["clap"]

[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]
