[package]
name = "rsrpc"
version = "0.17.0"
edition = "2018"
authors = ["spikehd"]

[lib]
name = "rsrpc"
path = "src/lib.rs"

[dependencies]
# binary-only
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12.8", default-features = false, optional = true, features = ["blocking", "default-tls"] }

sysinfo = "0.29.8"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0"
simple-websockets = { git = "https://github.com/SpikeHD/simple-websockets.git", branch = "master" }
chrono = "0.4.13"
rayon = "1.7.0"

#[cfg(target_os = "windows")]
winapi = { version = "0.3.9", features = ["namedpipeapi", "winbase"] }

[[bin]]
name = "rsrpc"
path = "src/bin.rs"
required-features = ["binary"]

[features]
binary = ["clap", "reqwest"]

[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]
