[package]
name = "rsrpc"
version = "0.22.0"
edition = "2018"
authors = ["spikehd"]

[lib]
name = "rsrpc"
path = "src/lib.rs"

[dependencies]
# binary-only
clap = { version = "4.5", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, optional = true, features = ["blocking", "default-tls"] }

sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
simple-websockets = { git = "https://github.com/SpikeHD/simple-websockets.git", branch = "master" }
chrono = "0.4"
rayon = "1.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winbase"] }
interprocess = "2.2"

[[bin]]
name = "rsrpc"
path = "src/bin.rs"
required-features = ["binary"]

[profile.release]
strip = "debuginfo"
lto = true

[features]
binary = ["clap", "reqwest"]

[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]
