[package]
name = "rsrpc-cli"
version = "0.25.0"
edition = "2018"
authors = ["spikehd"]

[dependencies]
rsrpc = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
ureq = { version = "3.3", default-features = false, features = ["rustls", "charset"] }


[target.x86_64-unknown-linux-gnu]
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-fuse-ld=lld",
]
