[package]
name = "rsrpc-cli"
version = "0.27.0"
edition = "2018"
authors = ["spikehd"]

[dependencies]
rsrpc = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
ureq = { version = "3.3", default-features = false, features = ["rustls", "charset"] }
ctrlc = "3.4"
