[package]
name = "rsrpc"
version = "0.24.3"
edition = "2018"
authors = ["spikehd"]

[dependencies]
sysinfo = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
simple-websockets = { git = "https://github.com/SpikeHD/simple-websockets.git", branch = "master" }
chrono = "0.4"
interprocess = "2.2"
aho-corasick = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winbase"] }
