[package]
name = "rsrpc"
version = "0.25.0"
edition = "2018"
authors = ["spikehd"]

[dependencies]
sysinfo = { version = "0.37", default-features = false, features = ["system", "multithread"] }  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
simple-websockets = { git = "https://github.com/SpikeHD/simple-websockets.git", branch = "master" }
chrono = "0.4"
interprocess = "2.2"
aho-corasick = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winbase"] }
