[package]
name = "rsrpc"
version = "0.27.1"
edition = "2018"
authors = ["spikehd"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
simple-websockets = { git = "https://github.com/SpikeHD/simple-websockets.git", branch = "master" }
chrono = "0.4"
interprocess = "2.2"
aho-corasick = "1.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
sysinfo = { version = "0.38", default-features = false, features = ["system", "multithread"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["namedpipeapi", "winbase"] }
